[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/player.vox" type="ArrayMesh" id=2]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.7, 0.7, 0.7 )

[node name="Player" type="Area"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.1, 0, 0, 0, 0.9, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.719728, 0, 0, 0, 1, 0, 0, 0, 0.848441, 0, 0.698105, 0 )
shape = SubResource( 2 )

[node name="tw" type="Tween" parent="."]

[node name="ray_up" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="ray_right" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="ray_left" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( -2, 0, 0 )

[node name="tw_r" type="Tween" parent="."]

[node name="tw_b" type="Tween" parent="."]
